added section about WIR

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -401,3 +401,42 @@ url = {https://dx.doi.org/10.13140/RG.2.2.18469.65764},
 year = {2020},
 }
 
+@book{Orell,
+  author        = {David Orrell and Roman Chlupatý},
+  title         = "The Evolution of Money",
+  publisher     = "Columbia University Press",
+  year          = "2016",
+  page = 184
+}
+
+@book{Gimigliano,
+  author        = {Noah Vardi and Luigi Scipione and Vittorio Santoro and Charilaos Mertzanis and Christos Gortsos and Celia De Anca and Valentino Cattelan and Marta Bozina Beros and Andrea Borron and Agnieszka Jańczuk-Gorywoda},
+  title         = "Money, Payment Systems and the European Union",
+  editor = "Gabriella Gimigliano",
+  publisher     = "Cambridge Scholars Publishing",
+  year          = "2016",
+  page = 68
+}
+
+@electronic{Vuillaume,
+author = {Philippe Vuillaume},
+title = {WIR: Eine ökonomische Analyse der Komplementärwährung zum Schweizer Franken},
+url = "{https://wwz.unibas.ch/fileadmin/user_upload/wwz/00_Professuren/Berentsen_Wirtschaftstheorie/Lecture_Material/Master_s_Thesis/Completed_Master_s_Theses/vuillaume.pdf}",
+year = {2015}
+}
+
+@electronic{WIR,
+author = {WIR},
+title = {Fragen \& Antworten (FAQ)},
+url = "{https://www.wir.ch/ueber-uns/fragen-antworten-faq/#eintrag-3199}",
+year = {2020}
+}
+
+@electronic{WIR2,
+author = {WIR},
+title = {WIR-KMU-Paket},
+url = "{https://www.wir.ch/firmenkunden/wir-ihr-weg-zum-erfolg/wir-kmu-paket/#eintrag-9374}",
+year = {2020}
+}
+
+
