--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -50,6 +50,7 @@ f.schaer@unibas.ch, christian.schuepbach@swisscom.com}}
     \acro{CISA}{Collective Investment Schemes Act}
     \acro{IMF}{International Monetary Fund}
     \acro{IMF's}{International Monetary Fund's}
+    \acro{SME}{Small and Medium-Sized Enterprise}
 \end{acronym}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -69,6 +70,15 @@ Money is omnipresent in modern life, but we rarely dare to question it. As it ha
 Stablecoins have been discussed as a potential candidate for a new, faster, more accessible and transparent form of money. With Facebook's engagement in the Libra stablecoin, there has been substantial attention to the topic. But the emergence of new technologies, such as \ac{DLT}, has subtly diverged our focus away from "how can we create value" to "how can we use this technology".\\
 
 In order to prevent falling prey to deceptive innovation, policymakers, incumbents, challengers and the general public alike should have the interest to develop a sound understanding of stablecoins. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{WIR: A Stablecoin Precursor}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The concept of devising a supplementary currency system is not a new one. One of the most successful examples is the Swiss WIR Bank, formerly known as the Swiss Economic Circle. WIR was founded in 1934 by Werner Zimmermann and Paul Enz, \cite{Orell}. WIR is the abbreviation for \textit{Wirtschaftsring-Genossenschaft} (meaning ``mutual economic support circle'') but at the same time also means ``we'' in German, \cite{Gimigliano}. WIR was driven out of the ambition to alleviate the negative effects of the Great Depression, solve the associated middle class crisis and reform the monetary system on the basis of the \textit{Freigeld} (meaning ``free money'') theory, \cite{Vuillaume}. To achieve these goals WIR initiated its own WIR currency (``CHW''), allowing participants to exchange goods and services without using conventional fiat currencies.
+
+Today the WIR network comprises over 62,000 \acp{SME}, reporting a turnover of almost 2 billion WIR in 2012. While nowadays the WIR network is also open to private clients, its focus remains on \acp{SME}. The main benefits of joining the WIR network are threefold: first, companies joining on average experience a 5\% increase in business, most likely due to loyalty effects, \cite{Orell}. Secondly, participants in the WIR network can obtain loans at a lower interest rate than compared to traditional bank loans. And thirdly, members of the WIR network experience a greater sense of solidarity and community, \cite{Vuillaume}.
+
+Companies participating in the WIR system commit to accepting CHW for their goods and services at a 1:1 rate to the corresponding CHF amount. In order to join the WIR system, companies can apply for a zero interest loan of up to 10,000 CHW, \cite{WIR2}. If a company wishes to leave the system, surplus CHW must be spent within the system. While the WIR system bears  similarities with the idea of a stablecoin, there also is a notable difference: buying or selling CHW on a secondary market is strictly prohibited, \cite{WIR}. In section \ref{sec:definition} we will come back to identify the presence of a secondary market as one of the key characteristics of a stablecoin. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{A Brief History of Stablecoins}
