corrected Alex' affiliation

--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -26,7 +26,7 @@
 \author[2]{Aetienne Sardon}
 \author[3]{Fabian Sch\"{a}r}
 \author[2]{Christian Sch\"{u}pbach}
-\affil[1]{Stronghold Labs, Numeraire Financial, MIT \& EPFL}
+\affil[1]{Sila, The Hebrew University of Jerusalem, Massachusetts Institute of Technology}
 \affil[2]{Swisscom, Digital Business Unit, Fintech}
 \affil[3]{Center for Innovative Finance, University of Basel}
 \affil[ ]{\textit {alex@silamoney.com, aetienne.sardon@swisscom.com, 
