prepared paper for arxiv

--- a/whitepaper.bib
+++ b/whitepaper.bib
@@ -208,7 +208,7 @@ month = 8
 }
 
 @article{Berentsen,
-author = {Aleksander Berentsen and Fabian Schär},
+author = {Aleksander Berentsen and Fabian Sch\"{a}r},
 title = {The Case for Central Bank Electronic Money and the Non-case for Central Bank Cryptocurrencies},
 journal = {Federal Reserve Bank of St. Louis},
 volume = {100},
@@ -234,7 +234,7 @@ pages = {79--106}
 }
 
 @inbook{Berentsen2,
-  author={Aleksander Berentsen and Fabian Schär},
+  author={Aleksander Berentsen and Fabian Sch\"{a}r},
   year= 2019, 
   chapter={Stablecoins: The quest for a low-volatility cryptocurrency}, 
   editor = {Antonio Fatas}, 
@@ -346,7 +346,7 @@ month = 11
 
 
 @electronic{Roth ,
-author = {Roth, Jakob and Schär, Fabian and Schöpfer, Aljoscha},
+author = {Roth, Jakob and Sch\"{a}r, Fabian and Sch\"{o}pfer, Aljoscha},
 title = {The Tokenization of Assets: Using Blockchains for Equity Crowdfunding},
   url           = "{http://dx.doi.org/10.2139/ssrn.3443382}",
   year          = "2019",
@@ -395,14 +395,14 @@ edition = {1}
 }
 
 @article{schaer:20,
-author = {Fabian Schär},
+author = {Fabian Sch\"{a}r},
 title = {Decentralized Finance: On Blockchain- and Smart Contract-based Financial Markets},
 url = {https://dx.doi.org/10.13140/RG.2.2.18469.65764},
 year = {2020},
 }
 
 @book{Orell,
-  author        = {David Orrell and Roman Chlupatý},
+  author        = {David Orrell and Roman Chlupat\'{y}},
   title         = "The Evolution of Money",
   publisher     = "Columbia University Press",
   year          = "2016",
@@ -420,7 +420,7 @@ year = {2020},
 
 @electronic{Vuillaume,
 author = {Philippe Vuillaume},
-title = {WIR: Eine ökonomische Analyse der Komplementärwährung zum Schweizer Franken},
+title = {WIR: Eine \"{o}konomische Analyse der Komplement\"{a}rw\"{a}hrung zum Schweizer Franken},
 url = "{https://wwz.unibas.ch/fileadmin/user_upload/wwz/00_Professuren/Berentsen_Wirtschaftstheorie/Lecture_Material/Master_s_Thesis/Completed_Master_s_Theses/vuillaume.pdf}",
 year = {2015}
 }
