--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -1,6 +1,8 @@
 \documentclass[conference]{IEEEtran}
 \IEEEoverridecommandlockouts
 
+\pdfoutput=1
+
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
@@ -91,7 +93,7 @@ the auditing process, \cite{Tether}\cite{Forbes}. Doubts about Tether's reserves
 
 \begin{figure}[htbp]
 	\centerline{
-		\includegraphics[width=\linewidth]{assets/tetherPrices.png}
+		\includegraphics[width=\linewidth]{tetherPrices.png}
 		}
 	\caption{Tether Prices and Market Cap.}
 	\label{fig:tether}
@@ -125,7 +127,7 @@ Data from Google Trends shows that the term stablecoin first emerged in late 201
 
 \begin{figure}[htbp]
 	\centerline{
-		\includegraphics[width=\linewidth]{assets/googleSearchActivity.png}
+		\includegraphics[width=\linewidth]{googleSearchActivity.png}
 		}
 	\caption{Google searches going from "Mastercoin" to "Stablecoin".}
 	\label{fig:mastercoin}
@@ -164,7 +166,7 @@ Christensen's Theory of Disruptive Innovation provides a useful tool to help ide
 
 \begin{figure}[htbp]
 	\centerline{
-		\includegraphics[width=\linewidth]{assets/disruptiveInnovation.png}
+		\includegraphics[width=\linewidth]{disruptiveInnovation.png}
 		}
 	\caption{Disruptive vs. sustaining innovation trajectories, \cite{Christensen}.}
 	\label{fig:disruption}
@@ -219,7 +221,7 @@ To put our view into a broader context, we refer to the \ac{IMF's} money tree (s
 
 \begin{figure}[htbp]
 	\centerline{
-		\includegraphics[width=\linewidth]{assets/moneyTree.png}
+		\includegraphics[width=\linewidth]{moneyTree.png}
 		}
 	\caption{Placing stablecoins into the IMF's ``money tree'', \cite{IMF}.}
 	\label{fig:monetarytree}
@@ -311,6 +313,6 @@ All in all, we conclude that stablecoins are a moving target with tremendous pot
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Bibliography
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\bibliographystyle{IEEEtran} \bibliography{IEEEabrv,mybibfile} 
+\bibliographystyle{IEEEtran} \bibliography{IEEEabrv,whitepaper} 
 
 \end{document}
